4. (added normalize and global css to Analisis_FODA)

--- a/Analisis_FODA/index.html
+++ b/Analisis_FODA/index.html
@@ -5,15 +5,21 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Análisis FODA</title>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-    
+
+<!-- Header -->
         <header>
             <h1>Análisis FODA</h1>
         </header>
-        
+
+<!-- Main -->
         <main>
             <h2>¿Qué es?</h2>
             <p>
@@ -81,6 +87,10 @@
 
         </main>
 
+<!-- Footer -->
+        <footer>
+            <p>@ 2024 Esteban Quiñones</p>
+        </footer>
     </body>
 </html>
 
